Grid exercice 1 - Test_grid_2

--- a/grid/initiation_grid_1/index.html
+++ b/grid/initiation_grid_1/index.html
@@ -17,5 +17,11 @@
         <div class="sept flexbox">sept</div>
         <div class="huit flexbox">huit</div>
     </div>
+    <div id="grille">
+        <header class="flexbox">HEADER</header>
+        <nav class="flexbox">NAV</nav>
+        <main class="flexbox">main</main>
+        <footer class="flexbox">FOOTER</footer>
+    </div>
 </body>
 </html>
