Exercice grid responsive : mobile first

--- a/grid/exercice_responsive_grid/responsive_grid.html
+++ b/grid/exercice_responsive_grid/responsive_grid.html
@@ -11,7 +11,7 @@
 <body>
     <div id="grille">
         <header class="flexbox">HEADER</header>
-        <article>article</article>
+        <article class="flexbox">article</article>
         <nav class="flexbox">NAV</nav>
         <aside class="flexbox">aside</aside>
         <footer class="flexbox">FOOTER</footer>
