--- a/grid/Exercices/exercice5.html
+++ b/grid/Exercices/exercice5.html
@@ -2,22 +2,20 @@
 <html lang="fr-FR">
 <head>
     <meta charset="UTF-8">
-    <title>mobile first</title>
+    <title>Grid - exercice 5</title>
     <meta name="description" content="Une phrase d’environ 170 caractères">
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./mobile_first.css">
+    <link rel="stylesheet" href="./exercice5.css">
 </head>
 <body>
     <div id="grille">
         <header class="flexbox">HEADER</header>
+        <div class="flexbox infos">INFOS</div>
         <nav class="flexbox">NAV</nav>
-        <section class="flexbox">
-            <article class="flexbox">article</article>
-            <aside class="flexbox aside1">aside</aside>
-            <aside class="flexbox aside2">aside</aside>
-            <aside class="flexbox aside3">aside</aside>
-        </section>
+        <div class="flexbox navBis">NAV SECONDAIRE</div>
+        <main class="flexbox">MAIN</main>
+        <aside class="flexbox">ASIDE</aside>
         <footer class="flexbox">FOOTER</footer>
     </div>
 </body>
