--- a/grid/Exercices/exercice6.html
+++ b/grid/Exercices/exercice6.html
@@ -2,18 +2,19 @@
 <html lang="fr-FR">
 <head>
     <meta charset="UTF-8">
-    <title>responsive grid</title>
+    <title>Grid - exercice 6</title>
     <meta name="description" content="Une phrase d’environ 170 caractères">
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./responsive_grid.css">
+    <link rel="stylesheet" href="./exercice6.css">
 </head>
 <body>
     <div id="grille">
         <header class="flexbox">HEADER</header>
-        <article class="flexbox">article</article>
-        <nav class="flexbox">NAV</nav>
-        <aside class="flexbox">aside</aside>
+        <div class="flexbox slide">BLOC SLIDE</div>
+        <section class="flexbox section1">SECTION</section>
+        <section class="flexbox section2">SECTION</section>
+        <section class="flexbox section3">SECTION</section>
         <footer class="flexbox">FOOTER</footer>
     </div>
 </body>
