--- a/grid/Exercices/exercice1.html
+++ b/grid/Exercices/exercice1.html
@@ -2,11 +2,11 @@
 <html lang="fr-FR">
 <head>
     <meta charset="UTF-8">
-    <title>Test grid</title>
+    <title>Grid - exercice 1</title>
     <meta name="description" content="Une phrase d’environ 170 caractères">
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="Test_grid.css">
+    <link rel="stylesheet" href="exercice1.css">
 </head>
 <body>
     <div class="grid">
