animation_css_9_projet - suite

--- a/animation_css_9_projet/source/Projets-formation-Animations-CSS-master/1.6 Menu Rideau/index.html
+++ b/animation_css_9_projet/source/Projets-formation-Animations-CSS-master/1.6 Menu Rideau/index.html
@@ -11,6 +11,7 @@
     
     <div id="myNav" class="overlay">
         <a href="#" onclick="closeNav()" class="closeBtn">&times;</a>
+        <!-- &times; : code pour créer la croix -->
 
         <div class="overlay-content">
             <a href="#">A Propos</a>
