PHP et animation_css_9(suite)
tableau indexé et associatif , foreach

--- a/animation_css_9_projet/source/Projets-formation-Animations-CSS-master/1.9 Menu Checkbox + Anim/index.html
+++ b/animation_css_9_projet/source/Projets-formation-Animations-CSS-master/1.9 Menu Checkbox + Anim/index.html
@@ -13,7 +13,10 @@
     <div class="navigation">
 
         <input type="checkbox" class="navigationCheckbox" id="navi">
+        <!-- LABEL = bouton -->
+        <!-- quand on cliquera desuus ça activera chekbox -->
         <label for="navi" class="navigationBtn">
+            <!-- span = menu burger -->
             <span class="navigationIcon"></span>
         </label>
 
