Formation menu navbar

--- a/formation_menu_navbar/FormationNavbar-master/Code source Fin/3.Accordéon vertical/index.html
+++ b/formation_menu_navbar/FormationNavbar-master/Code source Fin/3.Accordéon vertical/index.html
@@ -23,6 +23,7 @@
 				<div class="heading">
 					<span class="txt-titre">Archives</span>
 					<img src="ressources/chevron.svg" class="icone-titre icones-active" data-anim="a1">
+					<!-- data pour lié ou éloigner. D'autres ex : data-form, data-list etc -->
 				</div>
 				<a href="#">Nv Fichier</a>
 				<a href="#">Enregistrer</a>
