--- a/formation_menu_navbar/FormationNavbar-master/Code source Fin/4.Navigation Mobile/index.html
+++ b/formation_menu_navbar/FormationNavbar-master/Code source Fin/4.Navigation Mobile/index.html
@@ -13,7 +13,7 @@
    <div class="btn">
        <div class="ligne"></div>
    </div>
-
+<!-- 320px la taille minimum pour la nav menu, il pourra alors s'adapter à tous les écrans -->
    <nav>
        <ul class="liste">
            <li class="items">
