--- a/formation_menu_navbar/FormationNavbar-master/Code source Fin/5.MenuRond/index.html
+++ b/formation_menu_navbar/FormationNavbar-master/Code source Fin/5.MenuRond/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- 320px la taille minimum pour la nav menu, il pourra alors s'adapter à tous les écrans -->
     <div class="btn-open"></div>
     
     <div class="items">
