--- a/formation_menu_navbar/FormationNavbar-master/Code source Fin/8.VerticalHover/index.html
+++ b/formation_menu_navbar/FormationNavbar-master/Code source Fin/8.VerticalHover/index.html
@@ -15,7 +15,7 @@
             <li class="items">
                 Accueil
             </li>
-
+            <!-- data-anim pour lier les icone au menu -->
             <li data-anim="1" class="items">
                 <img src="ressources/coffee.svg" class="icones">
                 <p>café</p>
